--- a/index.html
+++ b/index.html
@@ -1,92 +1,87 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amigo Secreto</title>
     <style>
         body {
-            font-family: 'Georgia', Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            background-color: #f7f7f7;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
         .container {
             max-width: 600px;
-            margin: 40px auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin: auto;
             text-align: center;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .participant {
+            margin-bottom: 10px;
+        }
+        .wrapper {
+            width: 100%;
+            height: 100px;
+            overflow: hidden;
+            position: relative;
+            margin-top: 20px;
+        }
+        .paper {
+            width: 100%;
+            height: 100%;
+            background-color: #f0e68c;
+            position: absolute;
+            top: 0;
+            left: 0;
+            transform-origin: right;
+            animation: unwrap 3s ease-out forwards;
+        }
+        @keyframes unwrap {
+            0% {
+                transform: rotateY(90deg);
+            }
+            100% {
+                transform: rotateY(0deg);
+            }
         }
         h1 {
-            color: #ff66b2;
+            color: #ff4081;
         }
-        h2 {
-            color: #ff66b2;
-        }
-        .participant input {
+        input, button {
             padding: 10px;
-            margin: 10px 0;
-            width: 80%;
-            font-size: 16px;
-            border: 2px solid #ccc;
+            margin-top: 10px;
+            width: 100%;
+            box-sizing: border-box;
+            border: 1px solid #ccc;
             border-radius: 5px;
         }
         button {
-            padding: 10px 20px;
-            background-color: #ff66b2;
-            border: none;
-            border-radius: 5px;
+            background-color: #ff4081;
             color: white;
-            font-size: 16px;
             cursor: pointer;
-            transition: background-color 0.3s ease;
+            transition: background-color 0.3s;
         }
         button:hover {
-            background-color: #e65c9d;
+            background-color: #e0356c;
         }
-        #pix-key {
-            font-weight: bold;
-            color: #ff66b2;
-        }
-        .hidden {
-            display: none;
-        }
-        .show-button {
-            background-color: #4CAF50;
-            border-radius: 5px;
-            color: white;
-            margin-top: 10px;
-        }
-        .show-button:hover {
-            background-color: #45a049;
-        }
-        h3 {
-            margin-top: 30px;
-            color: #ff66b2;
-        }
-        #results {
-            margin-top: 20px;
+        ul {
             list-style-type: none;
-            padding: 0;
-        }
-        #results li {
-            background-color: #ffebf2;
-            padding: 10px;
-            margin: 5px 0;
-            border-radius: 5px;
-            font-size: 18px;
+            padding-left: 0;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Ajude-nos com uma doação</h1>
-        <p><strong>Chave Pix:</strong> <span id="pix-key" class="hidden">ab0dcb1d-f050-4cb8-9837-e7173fe937b1</span></p>
-        <button class="show-button" id="togglePix">Mostrar Chave Pix</button>
+        <p><strong>Chave Pix:</strong> <span id="pix-key">[INSIRA SUA CHAVE PIX AQUI]</span></p>
+        <button onclick="togglePix()">Ocultar/Mostrar Chave Pix</button>
 
         <h2>Amigo Secreto</h2>
         <label for="organizer">Nome do Organizador:</label>
@@ -114,8 +109,6 @@
         const addParticipantBtn = document.getElementById('addParticipant');
         const generatePairsBtn = document.getElementById('generatePairs');
         const resultsList = document.getElementById('results');
-        const togglePixBtn = document.getElementById('togglePix');
-        const pixKey = document.getElementById('pix-key');
 
         let participantCount = 2;
 
@@ -150,11 +143,6 @@
             });
         });
 
-        togglePixBtn.addEventListener('click', () => {
-            pixKey.classList.toggle('hidden');
-            togglePixBtn.textContent = pixKey.classList.contains('hidden') ? 'Mostrar Chave Pix' : 'Ocultar Chave Pix';
-        });
-
         function shuffleAndPair(array) {
             const shuffled = [...array].sort(() => Math.random() - 0.5);
             const pairs = [];
@@ -164,6 +152,15 @@
                 pairs.push([giver, receiver]);
             }
             return pairs;
+        }
+
+        function togglePix() {
+            const pixKey = document.getElementById('pix-key');
+            if (pixKey.style.display === "none") {
+                pixKey.style.display = "inline";
+            } else {
+                pixKey.style.display = "none";
+            }
         }
     </script>
 </body>
