--- a/index.html
+++ b/index.html
@@ -11,15 +11,19 @@
             padding: 0;
             background-color: #f8f8f8;
             color: #333;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
         }
         .container {
-            max-width: 600px;
-            margin: 50px auto;
-            text-align: center;
+            width: 80%;
+            max-width: 800px;
             background-color: #fff;
             padding: 30px;
             border-radius: 8px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
         }
         h1, h2 {
             color: #f34f98;
@@ -27,22 +31,43 @@
         .button {
             background-color: #f34f98;
             color: white;
-            padding: 10px 20px;
+            padding: 12px 25px;
             border: none;
             border-radius: 5px;
             cursor: pointer;
             font-size: 16px;
-            margin: 10px 0;
+            margin: 15px 0;
             transition: background-color 0.3s;
         }
         .button:hover {
             background-color: #d73a80;
         }
         .participant {
-            margin-bottom: 10px;
+            margin-bottom: 15px;
         }
         #pix-key {
             display: none;
+            margin-top: 10px;
+        }
+        input[type="text"] {
+            padding: 10px;
+            width: 80%;
+            max-width: 300px;
+            margin: 10px 0;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+            text-align: left;
+            margin: 20px 0;
+        }
+        li {
+            padding: 10px;
+            background-color: #f4f4f4;
+            border-radius: 5px;
+            margin-bottom: 10px;
         }
     </style>
 </head>
